--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <figcaption>Web design</figcaption>
       </figure>
       <figure>
-        <img class="img-portfolio" src="./ft/" alt="Projetos pessoais">
+        <img class="img-portfolio" src="./ft/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
         <figcaption>Projetos pessoais</figcaption>
       </figure>
     </section>
