--- a/index.html
+++ b/index.html
@@ -2,39 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ivan Henrique</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Roboto:wght@300&family=Source+Code+Pro&family=Yellowtail&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="menu">
           <ul> 
             <li><a href="#">Sobre</a><lis>
-            <li><a href="#">Portifólio</a><lis>
+            <li><a href="#">Entretenimento</a><lis>
             <li><a href="#">Contato</a><lis>  
           </ul>
         </nav>
-        <h1 class="site-title">Ivan Henrique</h1>
-        <h2 class="site-subtitle"> Web Beginner</h2>
+    <div>
+      <h1 class="site-title">Ivan Henrique</h1>
+      <h2 class="site-subtitle"> Jogador da Web</h2>
+    </div>
      </header>
-     <section>
-      <h2>Portfólio</h2>
-      <figure>
-        <img class="img-portfolio" src="./ft/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
-        <figcaption>eCommerce</figcaption>
-      </figure>
-      <figure>
-        <img class="img-portfolio" src="./ft/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
-        <figcaption>Mobile</figcaption>
-      </figure>
-      <figure>
-        <img class="img-portfolio" src="./ft/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
-        <figcaption>Web design</figcaption>
-      </figure>
-      <figure>
-        <img class="img-portfolio" src="./ft/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
-        <figcaption>Projetos pessoais</figcaption>
-      </figure>
+     <section class="portifolio">
+      <h2>Entretenimento</h2>
+
+      <div class="grid">
+        <figure>
+          <img class="img-portfolio" src="./ft/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
+          <figcaption>Teclados Prós</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="./ft/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
+          <figcaption>Mobile</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="./ft/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
+          <figcaption>Web design</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="./ft/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
+          <figcaption>Interface Homem Jogador</figcaption>
+        </figure>
+      </div>
+      
     </section>
   </body>
   </html>
