--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <nav class="menu">
           <ul> 
             <li><a href="#">Sobre</a><lis>
-            <li><a href="#">Entretenimento</a><lis>
-            <li><a href="#">Contato</a><lis>  
+            <li><a href="#portifolio">Entretenimento</a><lis>
+            <li><a href="#contato">Contato</a><lis>  
           </ul>
         </nav>
-    <div>
+    <div class="titulo">
       <h1 class="site-title">Ivan Henrique</h1>
       <h2 class="site-subtitle"> Jogador da Web</h2>
     </div>
      </header>
-     <section class="portifolio">
+     <section class="portifolio" id="portifolio">
       <h2>Entretenimento</h2>
 
       <div class="grid">
